--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,11 @@
     "require": {
         "php": "^8.2",
         "filament/filament": "^3.3",
+        "flowframe/laravel-trend": "^0.4.0",
         "joaopaulolndev/filament-edit-profile": "^1.0",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "saade/filament-fullcalendar": "^3.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
